# invalidity_mapping

./: docker-compose.yml
backend/: .dockerignore  .gitignore  Dockerfile  alembic.ini  fix_db.py  migrate_llm_score.py  pyproject.toml  requirements.txt
backend/app/: database.py  main.py
backend/app/api/: dependencies.py
backend/app/api/routes/: analysis.py  auth.py  claims.py  export.py  patents.py  prior_art.py  projects.py
backend/app/core/: config.py  logger.py  security.py  telemetry.py
backend/app/embedding/: __init__.py  create_embedding.py  qdrant_service.py  text_utils.py
backend/app/models/: __init__.py  analysis_job.py  claim.py  claim_chart.py  element_weight.py  mapping.py  patent.py  project.py  score.py  user.py
backend/app/schemas/: analysis.py  claim.py  export.py  mapping.py  patent.py  project.py  user.py
backend/app/services/: claim_parser.py  claim_processor.py  export_service.py  get_structured_abstract.py  get_structured_claims.py  get_structured_description.py  ingestion.py  mapping_engine.py  patent_fetch.py  preprocess.py  priort_art_extractor.py  recurssive_splitter.py  redis_service.py
backend/app/tasks/: background_jobs.py  chart_jobs.py  embed_pipeline.py  subject_ingestion.py
backend/app/utils/: db_retry.py  excel_parser.py  llm_client.py  rate_limit.py  validation.py
frontend/: .dockerignore  .gitignore  Dockerfile  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/src/app/: globals.css  layout.tsx  page.tsx
observability/: grafana-datasources.yaml  otel-collector.yaml  promtail.yaml  tempo.yaml
(+13 files in other folders)
