[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg==0.29.0",
    "beautifulsoup4>=4.14.3",
    "email-validator==2.1.1",
    "fastapi==0.110.0",
    "greenlet==3.0.3",
    "httpx==0.27.0",
    "langchain-text-splitters>=0.2.1",
    "openai==1.14.1",
    "openpyxl==3.1.2",
    "opentelemetry-exporter-otlp-proto-grpc>=1.42.1",
    "opentelemetry-instrumentation-fastapi>=0.63b1",
    "opentelemetry-instrumentation-sqlalchemy>=0.63b1",
    "opentelemetry-sdk>=1.42.1",
    "pandas==2.2.1",
    "passlib[bcrypt]==1.7.4",
    "pydantic==2.6.4",
    "pydantic-settings==2.2.1",
    "python-docx==1.1.0",
    "python-jose[cryptography]==3.3.0",
    "python-multipart==0.0.9",
    "qdrant-client>=1.12.1",
    "redis>=7.4.0",
    "reportlab==4.1.0",
    "sentence-transformers>=5.5.1",
    "sqlalchemy==2.0.28",
    "uvicorn==0.28.0",
]
